将行渲染单独剥离为一个组件，为了实现固定列

--- a/components/tables/style/Table.scss
+++ b/components/tables/style/Table.scss
@@ -48,9 +48,21 @@ $prefixCls:'cbd-table';
                 }
             }
         }
+        
         .#{$prefixCls}-scroll {
             overflow-x: hidden;
+
+            &.fixed {
+                position: absolute;
+                top: 0;
+            }
+
             .#{$prefixCls}-head {
+                &.fixed {
+                    table {
+                        min-width: auto;
+                    }
+                }
                 table thead tr {
                     &:first-child {
                         th {
