添加左固定列功能，但是在改变窗口大小时导致固定列单元格对不齐的问题未处理，后续需要添加resize的监听

--- a/components/tables/style/Table.scss
+++ b/components/tables/style/Table.scss
@@ -50,11 +50,15 @@ $prefixCls:'cbd-table';
         }
         
         .#{$prefixCls}-scroll {
-            overflow-x: hidden;
+            overflow: hidden;
 
             &.fixed {
                 position: absolute;
                 top: 0;
+
+                table{
+                    background: #fff;
+                }
             }
 
             .#{$prefixCls}-head {
@@ -90,6 +94,11 @@ $prefixCls:'cbd-table';
                 position: absolute;
                 border-bottom: 1px solid #d7dde4;
                 display: block;
+            }
+
+            &.fixed{
+                margin-bottom: -17px;
+                
             }
         }
         .#{$prefixCls}-placeholder {
