修正因窗口大小，应用显示百分比不同一起滚动条显示错误bug

--- a/components/tables/style/Table.scss
+++ b/components/tables/style/Table.scss
@@ -50,6 +50,7 @@ $prefixCls:'cbd-table';
         }
         .#{$prefixCls}-scroll {
             overflow: hidden;
+            box-sizing: border-box;
             &.fixed {
                 position: absolute;
                 top: 0;
