添加onCell,onRow方法，对外提供更多操作tr和td的方法

--- a/components/tables/style/Table.scss
+++ b/components/tables/style/Table.scss
@@ -48,6 +48,12 @@ $prefixCls:'cbd-table';
                 }
             }
         }
+        table tbody tr {
+            transition: background-color .2s ease-in-out;
+            &:hover {
+                background-color: #ebf7ff
+            }
+        }
         .#{$prefixCls}-scroll {
             overflow: hidden;
             box-sizing: border-box;
