--- a/components/table/style/Table.scss
+++ b/components/table/style/Table.scss
@@ -1,5 +1,5 @@
 $radius: 3px; // 圆角不要过大
-$prefixCls:'cbd-table';
+$prefixCls:'lyj-table';
 .#{$prefixCls} {
     position: relative;
     .#{$prefixCls}-content {
