修复首次加载时visible即有动画效果bug，修正目录结构，便于发布

--- a/components/style/lyj_main.scss
+++ b/components/style/lyj_main.scss
@@ -9,7 +9,7 @@ body {
 
 /*----------------------------table---------------------------------*/
 
-@import '../components/table/style/Table.scss';
+@import '../table/style/Table.scss';
 /*----------------------------dialog---------------------------------*/
 
-@import '../components/dialog/style/Dialog.scss';
+@import '../dialog/style/Dialog.scss';
