1、修改modal事件监听bug 2、添加新组件menu目录结构 3、写了个用svg绘制动点的样例

--- a/style/bs_main.scss
+++ b/style/bs_main.scss
@@ -1,2 +1,6 @@
 // 业务界面样式代码引用，初始值有lyj_main.scss
 @import '../components/style/lyj_main.scss';
+#canvas {
+    background: #3E989B;
+    display: block;
+}
