添加一个动态效果的菜单栏

--- a/components/style/lyj_main.scss
+++ b/components/style/lyj_main.scss
@@ -13,3 +13,7 @@ body {
 /*----------------------------dialog---------------------------------*/
 
 @import '../dialog/style/Dialog.scss';
+
+/*----------------------------menu---------------------------------*/
+
+@import '../menu/style/Menu.scss';
